# SPG

./: CMakeLists.txt  LICENSE  NOTICE  README.md  SPG_16nov16.tar  SPG_updated.tar  SS_GEN_vert.tar  default.nix  gcompile  icompile  launch.sh  test_launch.sh  testrun_etalon_out
Config/: operational.cfg  testrun.cfg
Src/: fft99f.f  generator.f90  main.f90  set_gen_params.f90
Src/rng/: ggnml.f  ggubs.f  mdnris.f  merfi.f  uertst.f  ugetio.f
